# torch_vision

./: README.md  pyproject.toml  requirements.txt  setup.py
cyy_torch_vision/: __init__.py
cyy_torch_vision/data_pipeline/: __init__.py  dali_dataloader.py  transform.py
cyy_torch_vision/dataset/: __init__.py  repository.py  util.py
cyy_torch_vision/model/: __init__.py  evaluator.py
cyy_torch_vision/test/: test_dataset.py  test_inference.py  test_training.py
test/: test_dataset.py
