[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyy_torch_vision"
version = "0.1"
requires-python = ">=3.11"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "cyy", email = "cyyever@outloo.com"},
]
license = {text = "BSD License"}
classifiers = [
  "Programming Language :: Python"
]
dependencies=["torchvision",
"cyy_torch_toolbox@git+https://git@github.com/cyyever/torch_toolbox.git@main",
]



[project.urls]
Repository = "https://github.com/cyyever/torch_vision"

[tool.pyright]
include = ["cyy_torch_vision"]
defineConstant = { DEBUG = true }

reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py312"
src = ["cyy_torch_vision"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["F401","E501","F403"]
